# legal-mcp

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-24-marketing-ready.md
landing/: index.html
legal_mcp/src/: server.py
